# NovaFlow

./: .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
messages/: en.json  ja.json  pt-BR.json  zh-TW.json  zh.json
scripts/: sync-version.sh
src-tauri/: .gitignore  Cargo.toml  Info.plist  private-key.pem.pub  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: ai.rs  app_setup.rs  backup.rs  device.rs  keywords.rs  lib.rs  main.rs  mcp.rs  mcp_runtime.rs  screenshot.rs  skills.rs  statusbar.rs  tray.rs  window.rs
src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  model-config.ts  not-found.tsx  page.tsx
src/app/(site)/: page.tsx
src/app/core/: layout.tsx
src/app/docs/: page.tsx
src/app/download/: page.tsx
src/app/mobile/: layout.tsx  mobile-styles.css
src/app/welcome/: page.tsx
src/components/: app-footbar.tsx  app-sidebar.tsx  console-filter.tsx  image-viewer.tsx  mobile-record-tools.tsx  mobile-statusbar.tsx  onboarding-spotlight-position.ts  onboarding-spotlight.tsx  photo-preview-provider.tsx  pin-toggle.tsx  search-dialog.tsx  simple-mobile-tool.tsx  sync-confirm-dialog.tsx  sync-status-badge.tsx  theme-toggle.tsx  title-bar.tsx
src/components/activity/: activity-drawer.tsx
src/components/memories/: memory-form.tsx  memory-list.tsx
src/components/providers/: NextIntlProvider.tsx
src/components/title-bar-toolbars/: sync-toggle.tsx
src/components/ui/: agent-plan.tsx  calendar.tsx  command.tsx  dialog.tsx  diff-viewer.tsx  enhanced-context-menu.tsx  expandable-tabs.tsx  (+4 more)
src/config/: emitters.ts  sync-exclusions.ts
src/db/: activity.ts  chats.ts  conversations.ts  index.ts  marks.ts  memories.ts  notes.ts  tags.ts  vector.ts
src/hooks/: use-file-shortcuts.ts  use-toolbar-shortcuts.ts  useI18n.ts
src/i18n/: request.ts
src/lib/: audio.ts  bm25.ts  check.ts  db-unified.ts  editor-layout-styles.ts  emitter.ts  event-report.ts  files.ts  fs-unified.ts  image-handler.ts  locales.ts  markdown.ts  outline-preferences.ts  outline-styles.ts  pdf.ts  rag.ts  record-navigation.ts  storage.ts  theme-utils.ts  utils.ts  workspace.ts
src/stores/: article.ts  chat.ts  mark.ts  mcp.ts  prompt.ts  recording.ts  setting.ts  settingsSync.ts  shortcut.ts  sidebar.ts  skills.ts  tag.ts  update.ts  vector.ts
(+233 files in other folders)
